<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">carnero</string>
	<!-- vcard -->
	<string name="vcard_name_nick">carnero</string>
	<string name="vcard_name_real">Radovan\nPaška</string>
	<string name="vcard_position">android developer</string>
	<string name="vcard_title_networks">social</string>
	<string name="vcard_title_timeline">experience</string>
	<!-- contact -->
	<string name="contact_phone_label">phone</string>
	<string name="contact_phone_value">+420&#x00A0;777&#x00A0;209&#x00A0;671</string>
	<string name="contact_email_label">email</string>
	<string name="contact_email_value">carnero@carnero.cc</string>
	<string name="contact_gtalk_label">gtalk</string>
	<string name="contact_gtalk_value">carnero@carnero.cc</string>
	<!-- networks -->
	<string name="network_github">Github</string>
	<string name="network_github_desc">real stuff</string>
	<string name="network_linkedin">LinkedIn</string>
	<string name="network_linkedin_desc">professional profile</string>
	<string name="network_plus">Google+</string>
	<string name="network_plus_desc">universal social network</string>
	<string name="network_twitter">Twitter</string>
	<string name="network_twitter_desc">short &amp; related to nothing</string>
	<string name="network_instagram">Instagram</string>
	<string name="network_instagram_desc">pictures of this and that</string>
	<string name="network_flickr">Flickr</string>
	<string name="network_flickr_desc">photos from life</string>
	<string name="network_500px">500px</string>
	<string name="network_500px_desc">best of photos</string>
	<string name="network_pinterest">Pinterest</string>
	<string name="network_pinterest_desc">interesting pictures from web</string>
	<string name="network_foursquare">Foursquare</string>
	<string name="network_foursquare_desc">visited places</string>
	<!-- cv -->
	<string name="cv_downloads">%1$s+ installs</string>
	<string name="cv_experience">of experience</string>
	<!-- descriptions -->
	<string name="desc_logo">carnero</string>
	<string name="desc_map">world map</string>
	<string name="desc_location">carnero\'s current location</string>
	<string name="desc_project_icon">project icon</string>
	<string name="desc_project_type">project type</string>
	<string name="desc_network_icon">social network\'s icon</string>
	<!-- errors -->
	<string name="error_no_phone">There is no application for calling.</string>
	<string name="error_no_mail">There is no application for composing email.</string>
	<string name="error_no_gtalk">There is no application for sending instant message.</string>
</resources>
